--- a/WebsiteLayout/assets/css/style.css
+++ b/WebsiteLayout/assets/css/style.css
@@ -449,7 +449,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center;
+  background: url(../img/smiley.jpg) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -1043,7 +1043,14 @@ h1, h2, h3, h4, h5, h6 {
 #gallery {
   padding: 60px;
   overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  background: url(../img/smiley.jpg) top center;
+  background-size: cover;
+  overflow: hidden;
+  position: relative;
 }
+
 
 #gallery .swiper-pagination {
   margin-top: 20px;
