--- a/SpassSeite/assets/css/style.css
+++ b/SpassSeite/assets/css/style.css
@@ -395,7 +395,7 @@ Versuch um den Header auf der Starseite zu Animieren
 
 #New {
   width: 100%;
-  background: url(../img/Smiley.jpg) top center; 
+  background: url(../img/gallery/Smiley.jpg) top center; 
   
   overflow: hidden; 
   
@@ -473,7 +473,7 @@ Versuch um den Header auf der Starseite zu Animieren
 #videoMain {
   width: 100%;
   height: 100vh;
-  background: url(../img/Smiley.jpg) top center;
+  background: url(../img/gallery/Smiley.jpg) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
